fixed css issue because im special kind of person to align centered elements to the entire html body :D

--- a/nps/nps/wwwroot/css/style.css
+++ b/nps/nps/wwwroot/css/style.css
@@ -16,7 +16,6 @@ html, body{
     height: 100% !important;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
 }
 .content{
